--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,123 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Gabarito:wght@500&family=Lato:ital,wght@1,300&family=Roboto:wght@300&family=Rubik:ital@1&display=swap');
+*{
+  padding: 0;
+  margin: 0;
+  font-family: 'Gabarito', cursive;
+}
+.navbar{
+  background-color: #000033;
+  padding: 1.5rem;
+}
+.logo{
+  width: 5%;
+  padding: 1rem 3rem;
+  position: absolute;
+}
+.info{
+  color: #fff;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.address , .contact, .cin{
+  opacity: 0.4;
+  font-size: 0.8rem;
+  line-height: 1.5;
+}
+span{
+  padding-left: 2rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
   display: flex;
-  flex-direction: column;
+  margin: 3rem;
+}
+.box1{
+  background-color: rgb(109, 152, 163);
+  width: 50%;
+  margin-right: 1rem;
+  margin-top: 3rem;
+  padding: 2rem;
+  height: 17rem;
+  border-radius: 10px;
+}
+.box2{
+  width: 50%;
+  background-color: #000033;
+  border-radius: 5px;
+  padding: 2rem;
+  border-radius: 10px;
+}
+.b1{
+  background-color: #fff;
+  width: 50%;
+  margin: 2rem auto;
+  padding: 2rem ;
+  text-align: center;
+  border-radius: 5px;
+}
+.flex{
+  display: flex;
+  justify-content: space-evenly;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  margin: 1.5rem;
 
-.App-link {
-  color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+label{
+  opacity: 0.5;
+  position: relative;
+  right: 4rem;
+}
+input{
+  padding: 0.5rem;
+  width: 15rem;
+  margin-top: 0.5rem;
+}
+button{
+  padding: 0.5rem 01rem;
+  margin: 1rem 0;
+  background-color: #000033;
+  color: #fff;
+  border-radius: 10px;
+}
+.active{
+  border-bottom: 2px solid black;
+  width: 50%;
+}
+.de-active{
+  border-bottom: 1px solid rgb(170, 166, 166);
+  width: 50%;
+}
+.para-box{
+  position: absolute;
+  right: 1rem;
+}
+.para{
+  width: 30%;
+  margin-top: 2rem;
+  opacity: 0.5;
+}
+.name{
+  margin-top: 5rem;
+}
+.photo{
+  width: 15%;
+  height: 30%;
+  position: absolute;
+  top: 12rem;
+  border-radius: 10px;
+  /* margin-left: 1rem; */
+}
+footer{
+  background-color: #000033;
+  padding: 1rem 3rem;
+  color: #fff;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 2rem;
+}
+.b2-heading{
+  margin: 1rem 0;
+}
+footer p{
+  padding: 0.2rem 0;
+  cursor: pointer;
 }
